--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,15 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      document.getElementById('menu-toggle').addEventListener('click', function() {
+          var menu = document.querySelector('.menu-opcoes-box');
+          if (menu.style.display === 'block' || menu.style.display === '') {
+              menu.style.display = 'none';
+          } else {
+              menu.style.display = 'block';
+          }
+      });
+  </script>
   </body>
 </html>
